--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>ForestEleven by Monserrate LLC</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="ForestEleven by Monserrate LLC is a digital marketing services firm focused on strategy, execution, and sustainable growth."/>
+  <meta name="description" content="Foresteleven by Monserrate LLC is a digital marketing services firm focused on strategy, execution, and sustainable growth."/>
   <style>
     body {
       margin: 0;
@@ -196,4 +196,3 @@ If you’re ready to stop guessing and start scaling with a structured, high-per
 
 </body>
 </html>
-
